syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

import "google/protobuf/empty.proto";

/**
 * Application Registration API for Data Providers.
 */
service Apps {
    rpc Register (RegisterRequest) returns (RegisterResult);
    rpc Unregister (UnregisterRequest) returns (google.protobuf.Empty);
    rpc NewOwner (NewOwnerRequest) returns (google.protobuf.Empty);
    rpc CheckOwner (CheckOwnerRequest) returns (CheckOwnerResult);
}

message NewOwnerRequest {
    string appId = 1; // ID
    string owner = 2; // Address
}

message CheckOwnerRequest {
    string appId = 1; // ID
    string owner = 2; // Address
}

message CheckOwnerResult {
    bool ok = 1;
}

message RegisterRequest {
    string name = 1;
}

message RegisterResult {
    string appId = 1; // ID
}

message UnregisterRequest {
    string appId = 1; // ID
}
