syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

/**
 * Data Schema Management API.
 */
service Schema {
    // Create creates JSON schema and registers it into the blockchain.
    rpc Create (CreateSchemaRequest) returns (CreateSchemaResult);
}

message CreateSchemaRequest {
    // a unique name of the schema.
    string name = 1;

    // a [JSON Schema](https://json-schema.org/) for data.
    string schema = 2;
}

message CreateSchemaResult {
    // true if the name already exists.
    bool exists = 1;

    // ID of the created schema.
    string id = 2;
}
